--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -7,10 +7,10 @@ spring.sql.init.mode=always
 
 spring.servlet.multipart.max-file-size=5MB
 
-spring.mail.host=${MAILGUN_SMTP_SERVER}
-spring.mail.port=${MAILGUN_SMTP_PORT}
-spring.mail.username=${MAILGUN_SMTP_LOGIN}
-spring.mail.password=${MAILGUN_SMTP_PASSWORD}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
